# VD_NEW

./: .gitignore  CMakeLists.txt  README.md
data/input/: voronoi_test1000.txt  voronoi_test5000.txt
data/output/: voronoi_output100.txt  voronoi_output1000.txt
include/: MyBoundaryPolygon.h  MyEdge.h  MyFace.h  MyVD.h  MyVertex.h
py/: test.py
src/: MyBoundaryPolygon.cpp  MyEdge.cpp  MyFace.cpp  MyVD.cpp  MyVertex.cpp  main.cpp
